--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.0.12 (unreleased)
+* Version 3.0.12 (released 2012-01-20)
 
 ** libgnutls: Added OCSP support.
 There is a new header file gnutls/ocsp.h and a set of new functions
